--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,10 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+node_modules/
+**/node_modules/
+.terraform
+.terraform.tfstate
+*.log
+*.jar
